# json-simple-obfuscator

./: .gitignore  .mega-linter.yml  .mise.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: renovate.json5
.github/workflows/: ci.yml  mega-linter.yml  release-build-setup.yml.part  release-plz.yml  release.yml  renovate.yml
examples/data-01/: README.md  input.json  input.pseudo.json
src/: main.rs
src/snapshots/: json_simple_obfuscator__tests__sample.snap
